force-app/main/default/objects/Solution/fields/Internal_Release_only__c.field-meta.xml
<CustomField>
    <fullName>Internal_Release_only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Solution should only be available for internal use</inlineHelpText>
    <label>Internal Release only</label>
    <type>Checkbox</type>
</CustomField>