force-app/main/default/objects/Solution/fields/Internal_Ticket_Reference__c.field-meta.xml
<CustomField>
    <fullName>Internal_Ticket_Reference__c</fullName>
    <description>Identifier in the internal bug tracking system, filled by AE.</description>
    <inlineHelpText>Identifier in the internal bug tracking system, filled by AE.</inlineHelpText>
    <label>Internal Ticket Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>