force-app/main/default/objects/Solution/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Solution owner</description>
    <inlineHelpText>Solution owner</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>