force-app/main/default/objects/Solution/fields/Propose_External_Release__c.field-meta.xml
<CustomField>
    <fullName>Propose_External_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if you would like to release the solution to distributors and the website.</inlineHelpText>
    <label>Propose External Release</label>
    <type>Checkbox</type>
</CustomField>