force-app/main/default/objects/Solution/fields/Search_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Search_Keyword__c</fullName>
    <description>Add words you want to use for search</description>
    <inlineHelpText>Add words you want to use for search</inlineHelpText>
    <label>Search Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>