force-app/main/default/objects/Solution/fields/Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date__c</fullName>
    <inlineHelpText>Date of last change of status.</inlineHelpText>
    <label>Status Change Date</label>
    <type>Date</type>
</CustomField>