force-app/main/default/objects/Solution/fields/Type_Number__c.field-meta.xml
<CustomField>
    <fullName>Type_Number__c</fullName>
    <formula>Product__r.Type_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Number</label>
    <type>Text</type>
</CustomField>