force-app/main/default/objects/Solution/validationRules/Restrict_publication_in_portal_and_web.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_publication_in_portal_and_web</fullName>
    <active>true</active>
    <description>Only solutions in status &quot;Reviewed&quot; and &quot;Ready for EoL&quot; can be made available on the partner portal and website</description>
    <errorConditionFormula>and (
   or (
      ispickval (Status,&quot;Draft&quot;),
      ispickval (Status, &quot;Ready for Review&quot;),
      ispickval (Status, &quot;End of Life&quot;)
   ),
   or (
       IsPublishedInPublicKb ,
       IsPublished 
   )
)</errorConditionFormula>
    <errorDisplayField>IsPublished</errorDisplayField>
    <errorMessage>Only Solutions with Status &quot;Released&quot; and &quot;Ready for EoL&quot; can be made available on the partner portal or website.</errorMessage>
</ValidationRule>