force-app/main/default/objects/Solution/listViews/My_draft_Solutions.listView-meta.xml
<ListView>
    <fullName>My_draft_Solutions</fullName>
    <columns>SOLUTION.SOLUTION_NUMBER</columns>
    <columns>SOLUTION.STATUS</columns>
    <columns>SOLUTION.ISSUE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>SOLUTION.CREATED_DATE</columns>
    <columns>Internal_Release_only__c</columns>
    <columns>Propose_External_Release__c</columns>
    <columns>Status_Change_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SOLUTION.STATUS</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>My draft Solutions</label>
    <sharedTo>
        <roleAndSubordinatesInternal>ubloxEC</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>