force-app/main/default/objects/Solution/listViews/Solution_Released_by_AE.listView-meta.xml
<ListView>
    <fullName>Solution_Released_by_AE</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>SOLUTION.SOLUTION_NUMBER</columns>
    <columns>SOLUTION.STATUS</columns>
    <columns>SOLUTION.ISSUE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>SOLUTION.CREATED_DATE</columns>
    <columns>Internal_Release_only__c</columns>
    <columns>Propose_External_Release__c</columns>
    <columns>Status_Change_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SOLUTION.STATUS</field>
        <operation>equals</operation>
        <value>Released</value>
    </filters>
    <filters>
        <field>Search_Keyword__c</field>
        <operation>contains</operation>
        <value>GNSS</value>
    </filters>
    <label>Solution Released by AE</label>
    <sharedTo>
        <roleAndSubordinatesInternal>ubloxEC</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>